--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -36,196 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mlb.classes._league_data"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>date</th>\n",
-       "      <th>number</th>\n",
-       "      <th>mlbam</th>\n",
-       "      <th>name</th>\n",
-       "      <th>pos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>2017-06-24</td>\n",
-       "      <td>56</td>\n",
-       "      <td>279824</td>\n",
-       "      <td>Mark Buehrle</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>2015-05-23</td>\n",
-       "      <td>14</td>\n",
-       "      <td>117244</td>\n",
-       "      <td>Paul Konerko</td>\n",
-       "      <td>1B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>2010-08-29</td>\n",
-       "      <td>35</td>\n",
-       "      <td>123245</td>\n",
-       "      <td>Frank Thomas</td>\n",
-       "      <td>1B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1997</td>\n",
-       "      <td>1997-09-14</td>\n",
-       "      <td>72</td>\n",
-       "      <td>114182</td>\n",
-       "      <td>Carlton Fisk</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1997</td>\n",
-       "      <td>1997-04-15</td>\n",
-       "      <td>42</td>\n",
-       "      <td>121314</td>\n",
-       "      <td>Jackie Robinson</td>\n",
-       "      <td>2B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1989</td>\n",
-       "      <td>1989-08-20</td>\n",
-       "      <td>3</td>\n",
-       "      <td>110456</td>\n",
-       "      <td>Harold Baines</td>\n",
-       "      <td>OF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1987</td>\n",
-       "      <td>1987-01-01</td>\n",
-       "      <td>19</td>\n",
-       "      <td>120562</td>\n",
-       "      <td>Billy Pierce</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1987</td>\n",
-       "      <td>1987-01-01</td>\n",
-       "      <td>16</td>\n",
-       "      <td>118055</td>\n",
-       "      <td>Ted Lyons</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1984</td>\n",
-       "      <td>1984-08-14</td>\n",
-       "      <td>11</td>\n",
-       "      <td>110290</td>\n",
-       "      <td>Luis Aparicio</td>\n",
-       "      <td>SS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1983</td>\n",
-       "      <td>1983-01-01</td>\n",
-       "      <td>9</td>\n",
-       "      <td>119176</td>\n",
-       "      <td>Minnie Minoso</td>\n",
-       "      <td>OF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1976</td>\n",
-       "      <td>1976-01-01</td>\n",
-       "      <td>2</td>\n",
-       "      <td>114361</td>\n",
-       "      <td>Nellie Fox</td>\n",
-       "      <td>2B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1975</td>\n",
-       "      <td>1975-01-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>110297</td>\n",
-       "      <td>Luke Appling</td>\n",
-       "      <td>SS</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   season        date number   mlbam             name pos\n",
-       "0    2017  2017-06-24     56  279824     Mark Buehrle   P\n",
-       "1    2015  2015-05-23     14  117244     Paul Konerko  1B\n",
-       "2    2010  2010-08-29     35  123245     Frank Thomas  1B\n",
-       "3    1997  1997-09-14     72  114182     Carlton Fisk   C\n",
-       "4    1997  1997-04-15     42  121314  Jackie Robinson  2B\n",
-       "5    1989  1989-08-20      3  110456    Harold Baines  OF\n",
-       "6    1987  1987-01-01     19  120562     Billy Pierce   P\n",
-       "7    1987  1987-01-01     16  118055        Ted Lyons   P\n",
-       "8    1984  1984-08-14     11  110290    Luis Aparicio  SS\n",
-       "9    1983  1983-01-01      9  119176    Minnie Minoso  OF\n",
-       "10   1976  1976-01-01      2  114361       Nellie Fox  2B\n",
-       "11   1975  1975-01-01      4  110297     Luke Appling  SS"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f.retired"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -236,76 +46,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Guaranteed Rate Field'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.person'>\n",
+      "joe\n",
+      "25\n",
+      "\n",
+      "<class '__main__.student'>\n",
+      "joe\n",
+      "25\n",
+      "[('__class__', <class '__main__.student'>), ('__delattr__', <method-wrapper '__delattr__' of student object at 0x7fa0ffa01e40>), ('__dict__', {'name': 'joe', 'age': 25}), ('__dir__', <built-in method __dir__ of student object at 0x7fa0ffa01e40>), ('__doc__', None), ('__eq__', <method-wrapper '__eq__' of student object at 0x7fa0ffa01e40>), ('__format__', <built-in method __format__ of student object at 0x7fa0ffa01e40>), ('__ge__', <method-wrapper '__ge__' of student object at 0x7fa0ffa01e40>), ('__getattribute__', <method-wrapper '__getattribute__' of student object at 0x7fa0ffa01e40>), ('__getitem__', <bound method person.__getitem__ of <__main__.student object at 0x7fa0ffa01e40>>), ('__gt__', <method-wrapper '__gt__' of student object at 0x7fa0ffa01e40>), ('__hash__', <method-wrapper '__hash__' of student object at 0x7fa0ffa01e40>), ('__init__', <bound method student.__init__ of <__main__.student object at 0x7fa0ffa01e40>>), ('__init_subclass__', <built-in method __init_subclass__ of type object at 0x7fa0f888c6a0>), ('__le__', <method-wrapper '__le__' of student object at 0x7fa0ffa01e40>), ('__lt__', <method-wrapper '__lt__' of student object at 0x7fa0ffa01e40>), ('__module__', '__main__'), ('__ne__', <method-wrapper '__ne__' of student object at 0x7fa0ffa01e40>), ('__new__', <built-in method __new__ of type object at 0x10c933880>), ('__reduce__', <built-in method __reduce__ of student object at 0x7fa0ffa01e40>), ('__reduce_ex__', <built-in method __reduce_ex__ of student object at 0x7fa0ffa01e40>), ('__repr__', <method-wrapper '__repr__' of student object at 0x7fa0ffa01e40>), ('__setattr__', <bound method person.__setattr__ of <__main__.student object at 0x7fa0ffa01e40>>), ('__sizeof__', <built-in method __sizeof__ of student object at 0x7fa0ffa01e40>), ('__str__', <method-wrapper '__str__' of student object at 0x7fa0ffa01e40>), ('__subclasshook__', <built-in method __subclasshook__ of type object at 0x7fa0f888c6a0>), ('__weakref__', None), ('age', 25), ('name', 'joe')]\n"
+     ]
     }
    ],
    "source": [
-    "f.division.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "class person:\n",
-    "    def __init__(self,**kwargs):\n",
+    "    def __init__(self,name:str,**kwargs):\n",
+    "        self.__dict__.update({'name':name})\n",
     "        self.__dict__.update(kwargs)\n",
+    "\n",
     "        \n",
     "    def __getitem__(self,_attr):\n",
     "        return getattr(self,_attr)\n",
     "    \n",
     "    def __setattr__(self,_attr,_val):\n",
     "        pass\n",
-    "    \n",
-    "    def _attr_getter(self):\n",
-    "        return self._name\n",
-    "    \n",
-    "    def _attr_setter(self,_key):\n",
-    "        return self.__dict__[_key]\n",
     "        \n",
     "    # def __init_subclass__(cls):\n",
     "    #     pass\n",
     "        \n",
-    "\n",
     "class student(person):\n",
-    "    def __init__(self,**kwargs):\n",
-    "        super().__init__(**kwargs)\n",
+    "    def __init__(self,name:str,**kwargs):\n",
+    "        _kwargs = locals()\n",
+    "        _kwargs.pop('self')\n",
+    "        super().__init__(name,**kwargs)\n",
+    "    \n",
+    "    # def __setattr__(self,_attr,_val):\n",
+    "    #     setattr(_attr,_val)\n",
     "        \n",
-    "\n",
-    "\n",
-    "    # def __setitem__(self,_attr,_val):\n",
-    "    #     setattr(\n",
-    "    #         self,\n",
-    "    #         _attr,\n",
-    "    #         property(\n",
-    "    #             fget=lambda x : self.__dict__[_attr])\n",
-    "    #         )\n",
-    "\n",
-    "    # def __delattr__(self, _attr: str):\n",
-    "    #     delattr(self,_attr)\n",
+    "p = person(name='joe',age=25)\n",
+    "s = student(name='joe',age=25)\n",
+    "print(type(p))\n",
+    "print(p.name)\n",
+    "print(p.age)\n",
+    "print('')\n",
+    "print(type(s))\n",
+    "print(s.name)\n",
+    "print(s.age)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['name',\n",
+       " 'age',\n",
+       " '__module__',\n",
+       " '__init__',\n",
+       " '__getitem__',\n",
+       " '__setattr__',\n",
+       " '__dict__',\n",
+       " '__weakref__',\n",
+       " '__doc__',\n",
+       " '__new__',\n",
+       " '__repr__',\n",
+       " '__hash__',\n",
+       " '__str__',\n",
+       " '__getattribute__',\n",
+       " '__delattr__',\n",
+       " '__lt__',\n",
+       " '__le__',\n",
+       " '__eq__',\n",
+       " '__ne__',\n",
+       " '__gt__',\n",
+       " '__ge__',\n",
+       " '__reduce_ex__',\n",
+       " '__reduce__',\n",
+       " '__subclasshook__',\n",
+       " '__init_subclass__',\n",
+       " '__format__',\n",
+       " '__sizeof__',\n",
+       " '__dir__',\n",
+       " '__class__']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'student' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zr/zg5glfgx0nnglw9432y0hl5w0000gn/T/ipykernel_9248/1888443627.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'student' object has no attribute 'name'"
+     ]
+    }
+   ],
    "source": [
-    "p = person(name='joe')"
+    "p.name"
    ]
   },
   {
