--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -11,10 +11,74 @@
     "import datetime as dt\n",
     "import mlb\n",
     "import requests\n",
-    "import requests_html\n",
     "import pandas as pd\n",
     "from mlb.utils import keys"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on Person in module mlb.objects object:\n",
+      "\n",
+      "class Person(builtins.object)\n",
+      " |  Person(_player_mlbam: int, **kwargs)\n",
+      " |  \n",
+      " |  Person instance\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, _player_mlbam: int, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Readonly properties defined here:\n",
+      " |  \n",
+      " |  bio\n",
+      " |  \n",
+      " |  stats\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = mlb.Person(547989)\n",
+    "help(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'roster'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zr/zg5glfgx0nnglw9432y0hl5w0000gn/T/ipykernel_8625/3976358344.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmlb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mteam_hitting\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m145\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2022\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/projects/simplestats-mlb/mlb/functions.py\u001b[0m in \u001b[0;36mteam_hitting\u001b[0;34m(mlbam, season)\u001b[0m\n\u001b[1;32m   3031\u001b[0m     \u001b[0mhittingAdv_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"status\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"mlbam\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"playerName\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"primaryPosition\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3032\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3033\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mplayer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"roster\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3034\u001b[0m         \u001b[0mstatus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"status\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"description\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3035\u001b[0m         \u001b[0mplayerName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"person\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"fullName\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'roster'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -46,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +123,7 @@
       "\n",
       "<class '__main__.student'>\n",
       "joe\n",
-      "25\n",
-      "[('__class__', <class '__main__.student'>), ('__delattr__', <method-wrapper '__delattr__' of student object at 0x7fa0ffa01e40>), ('__dict__', {'name': 'joe', 'age': 25}), ('__dir__', <built-in method __dir__ of student object at 0x7fa0ffa01e40>), ('__doc__', None), ('__eq__', <method-wrapper '__eq__' of student object at 0x7fa0ffa01e40>), ('__format__', <built-in method __format__ of student object at 0x7fa0ffa01e40>), ('__ge__', <method-wrapper '__ge__' of student object at 0x7fa0ffa01e40>), ('__getattribute__', <method-wrapper '__getattribute__' of student object at 0x7fa0ffa01e40>), ('__getitem__', <bound method person.__getitem__ of <__main__.student object at 0x7fa0ffa01e40>>), ('__gt__', <method-wrapper '__gt__' of student object at 0x7fa0ffa01e40>), ('__hash__', <method-wrapper '__hash__' of student object at 0x7fa0ffa01e40>), ('__init__', <bound method student.__init__ of <__main__.student object at 0x7fa0ffa01e40>>), ('__init_subclass__', <built-in method __init_subclass__ of type object at 0x7fa0f888c6a0>), ('__le__', <method-wrapper '__le__' of student object at 0x7fa0ffa01e40>), ('__lt__', <method-wrapper '__lt__' of student object at 0x7fa0ffa01e40>), ('__module__', '__main__'), ('__ne__', <method-wrapper '__ne__' of student object at 0x7fa0ffa01e40>), ('__new__', <built-in method __new__ of type object at 0x10c933880>), ('__reduce__', <built-in method __reduce__ of student object at 0x7fa0ffa01e40>), ('__reduce_ex__', <built-in method __reduce_ex__ of student object at 0x7fa0ffa01e40>), ('__repr__', <method-wrapper '__repr__' of student object at 0x7fa0ffa01e40>), ('__setattr__', <bound method person.__setattr__ of <__main__.student object at 0x7fa0ffa01e40>>), ('__sizeof__', <built-in method __sizeof__ of student object at 0x7fa0ffa01e40>), ('__str__', <method-wrapper '__str__' of student object at 0x7fa0ffa01e40>), ('__subclasshook__', <built-in method __subclasshook__ of type object at 0x7fa0f888c6a0>), ('__weakref__', None), ('age', 25), ('name', 'joe')]\n"
+      "25\n"
      ]
     }
    ],
@@ -449,7 +512,7 @@
    "hash": "290a4e1496360bee5be2c9273f15849004c3990b55f9c717ea6d4be35dd535e9"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('ssvenv')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -464,8 +527,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.0"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
