classes/objects updates

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -12,52 +12,17 @@
     "import mlb\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from mlb.utils import keys"
+    "from mlb.utils import keys\n",
+    "from IPython.display import display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on Person in module mlb.objects object:\n",
-      "\n",
-      "class Person(builtins.object)\n",
-      " |  Person(_player_mlbam: int, **kwargs)\n",
-      " |  \n",
-      " |  Person instance\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, _player_mlbam: int, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Readonly properties defined here:\n",
-      " |  \n",
-      " |  bio\n",
-      " |  \n",
-      " |  stats\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p = mlb.Person(547989)\n",
-    "help(p)"
+    "p = mlb.Person(117244)"
    ]
   },
   {
@@ -66,19 +31,324 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'roster'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/zr/zg5glfgx0nnglw9432y0hl5w0000gn/T/ipykernel_8625/3976358344.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmlb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mteam_hitting\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m145\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2022\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/projects/simplestats-mlb/mlb/functions.py\u001b[0m in \u001b[0;36mteam_hitting\u001b[0;34m(mlbam, season)\u001b[0m\n\u001b[1;32m   3031\u001b[0m     \u001b[0mhittingAdv_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"status\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"mlbam\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"playerName\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"primaryPosition\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3032\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3033\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mplayer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"roster\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3034\u001b[0m         \u001b[0mstatus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"status\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"description\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3035\u001b[0m         \u001b[0mplayerName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"person\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"fullName\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'roster'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jersey</th>\n",
+       "      <th>position</th>\n",
+       "      <th>status</th>\n",
+       "      <th>team</th>\n",
+       "      <th>tm_mlbam</th>\n",
+       "      <th>from_date</th>\n",
+       "      <th>to_date</th>\n",
+       "      <th>status_date</th>\n",
+       "      <th>forty_man</th>\n",
+       "      <th>active</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1B</td>\n",
+       "      <td>Free Agent</td>\n",
+       "      <td>Chicago White Sox</td>\n",
+       "      <td>145</td>\n",
+       "      <td>2013-12-04</td>\n",
+       "      <td>2014-10-30</td>\n",
+       "      <td>2014-10-30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-</td>\n",
+       "      <td>1B</td>\n",
+       "      <td>Traded</td>\n",
+       "      <td>Cincinnati Reds</td>\n",
+       "      <td>113</td>\n",
+       "      <td>1998-07-04</td>\n",
+       "      <td>1998-11-11</td>\n",
+       "      <td>1998-07-04</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-</td>\n",
+       "      <td>1B</td>\n",
+       "      <td>Traded</td>\n",
+       "      <td>Los Angeles Dodgers</td>\n",
+       "      <td>119</td>\n",
+       "      <td>1994-06-30</td>\n",
+       "      <td>1998-07-04</td>\n",
+       "      <td>1994-06-30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  jersey position      status                 team  tm_mlbam   from_date  \\\n",
+       "0     14       1B  Free Agent    Chicago White Sox       145  2013-12-04   \n",
+       "1      -       1B      Traded      Cincinnati Reds       113  1998-07-04   \n",
+       "2      -       1B      Traded  Los Angeles Dodgers       119  1994-06-30   \n",
+       "\n",
+       "      to_date status_date  forty_man  active  \n",
+       "0  2014-10-30  2014-10-30      False   False  \n",
+       "1  1998-11-11  1998-07-04      False   False  \n",
+       "2  1998-07-04  1994-06-30      False   False  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tm_mlbam</th>\n",
+       "      <th>tm_full_name</th>\n",
+       "      <th>tm_location</th>\n",
+       "      <th>tm_club</th>\n",
+       "      <th>tm_slug</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>145</td>\n",
+       "      <td>Chicago White Sox</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>White Sox</td>\n",
+       "      <td>white-sox-145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>113</td>\n",
+       "      <td>Cincinnati Reds</td>\n",
+       "      <td>Cincinnati</td>\n",
+       "      <td>Reds</td>\n",
+       "      <td>reds-113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>119</td>\n",
+       "      <td>Los Angeles Dodgers</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>Dodgers</td>\n",
+       "      <td>dodgers-119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tm_mlbam         tm_full_name  tm_location    tm_club        tm_slug\n",
+       "0       145    Chicago White Sox      Chicago  White Sox  white-sox-145\n",
+       "1       113      Cincinnati Reds   Cincinnati       Reds       reds-113\n",
+       "2       119  Los Angeles Dodgers  Los Angeles    Dodgers    dodgers-119"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(p.roster_entries)\n",
+    "display(p.teams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = p.past_teams_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_type</th>\n",
+       "      <th>tm_mlbam</th>\n",
+       "      <th>tm_name</th>\n",
+       "      <th>lg_mlbam</th>\n",
+       "      <th>lg_name</th>\n",
+       "      <th>PA</th>\n",
+       "      <th>TB</th>\n",
+       "      <th>LOB</th>\n",
+       "      <th>BIP</th>\n",
+       "      <th>BABIP</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Whiffs</th>\n",
+       "      <th>PO</th>\n",
+       "      <th>LO</th>\n",
+       "      <th>GO</th>\n",
+       "      <th>FH</th>\n",
+       "      <th>PH</th>\n",
+       "      <th>LH</th>\n",
+       "      <th>GH</th>\n",
+       "      <th>sB</th>\n",
+       "      <th>sF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>R</td>\n",
+       "      <td>145</td>\n",
+       "      <td>Chicago White Sox</td>\n",
+       "      <td>103</td>\n",
+       "      <td>American League</td>\n",
+       "      <td>4827</td>\n",
+       "      <td>2241</td>\n",
+       "      <td>1723</td>\n",
+       "      <td>3420</td>\n",
+       "      <td>.324</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2364</td>\n",
+       "      <td>207</td>\n",
+       "      <td>308</td>\n",
+       "      <td>1154</td>\n",
+       "      <td>225</td>\n",
+       "      <td>4</td>\n",
+       "      <td>609</td>\n",
+       "      <td>424</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P</td>\n",
+       "      <td>145</td>\n",
+       "      <td>Chicago White Sox</td>\n",
+       "      <td>103</td>\n",
+       "      <td>American League</td>\n",
+       "      <td>32</td>\n",
+       "      <td>13</td>\n",
+       "      <td>20</td>\n",
+       "      <td>24</td>\n",
+       "      <td>.348</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  game_type  tm_mlbam            tm_name  lg_mlbam          lg_name    PA  \\\n",
+       "0         R       145  Chicago White Sox       103  American League  4827   \n",
+       "1         P       145  Chicago White Sox       103  American League    32   \n",
+       "\n",
+       "     TB   LOB   BIP BABIP  ...  Whiffs   PO   LO    GO   FH PH   LH   GH sB  \\\n",
+       "0  2241  1723  3420  .324  ...    2364  207  308  1154  225  4  609  424  0   \n",
+       "1    13    20    24  .348  ...      14    0    1    11    1  0    4    4  0   \n",
+       "\n",
+       "   sF  \n",
+       "0  45  \n",
+       "1   0  \n",
+       "\n",
+       "[2 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.stats.hitting.advanced.career"
+   ]
   },
   {
    "cell_type": "code",
